fixed Map on small screen

--- a/styles/breakpoints.css
+++ b/styles/breakpoints.css
@@ -95,6 +95,10 @@
 	.locMap.affix {
 		position: fixed;
 		top: 0;
-		width: 100%;
+		width: 98%;
+	}
+
+	nav {
+		margin-bottom: 0;
 	}
 }
